--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <div class="info">
             <img class="image-title" alt="Super-Mario-Brothers-title" src="./src/images/super-mario-bros-title.png">
             <p class="description">
-            No 1 of Coding! Gifted NK 3.2, How dare you? .....C'mon Dude....Join Mario, Luigi, and Toad on a super fun adventure to save Princess Peach from the evil Bowser in the Mushroom Kingdom! Jump, run, and dodge obstacles in an exciting game made by Gifted NK from Matthayom Wat Nongkhaem School. High school students, want to code games like this? Learn with STEAM (Science, Tech, Engineering, Arts, Math) and create your own epic adventures using AI and data science!
+            No 1 of Coding! Gifted NK 3.2, How dare you? .....C'mon Dude....Join Marioskibidi tung tung tung, Luigi, and Toad on a super fun adventure to save Princess Peach from the evil Bowser in the Mushroom Kingdom! Jump, run, and dodge obstacles in an exciting game made by Gifted NK from Matthayom Wat Nongkhaem School. High school students, want to code games like this? Learn with STEAM (Science, Tech, Engineering, Arts, Math) and create your own epic adventures using AI and data science!
             </p>
             <p class="description">Are you ready to join him?</p>
             <button class="button-trailer" onclick="openVideoModal()">Watch the trailer</button>
